Converted Java Code to Kotlin Code